--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">DropTrendz</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active fa fa-home fa-lg " aria-current="page" href="/"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="add">Agregar Usuarios</a>
