--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
                     <h5 class="card-title">Welcome to the User Management System</h5>
                     <p class="card-text">This is a simple CRUD application built with Node.js and
                     Express.js. You can add, view, edit, and delete users.</p>
-                    <a href="add" class="btn btn-primary">Add User</a>  
+                    <a href="/add" class="btn btn-primary">Add User</a>  
                     <a href="view" class="btn btn-secondary">View Users</a>
                 </div>
         </div>
