--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -5,31 +5,31 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <h1>Agregar usuario</h1>
-                <form id="add-form" action="/user/add" method="post" enctype="multipart/form-data">
+                <h1>Agregar Productos</h1>
+                <form id="add-form" action="/products/add" method="post" enctype="multipart/form-data">
                     <div class="mb3">
                         <label for="name" class="form-label">Name: </label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required />
                     </div>
                     <div class="mb3">
-                        <label for="email" class="form-label">Email: </label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required />
+                        <label for="description" class="form-label">Descripcion: </label>
+                        <input type="description" class="form-control" id="description" name="description" placeholder="Enter your description" required />
                     </div>
                     <div class="mb3">
-                        <label for="password" class="form-label">Password: </label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required />
+                        <label for="price" class="form-label">Price: </label>
+                        <input type="text" class="form-control" id="price" name="price" placeholder="Enter your price" required />
                     </div>
                     <div class="mb3">
-                        <label for="phone" class="form-label">Phone: </label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your phone number" required />
+                        <label for="stock" class="form-label">Stock: </label>
+                        <input type="text" class="form-control" id="stock" name="stock" placeholder="Enter your stock" required />
                     </div>
                     <div class="mb3">
-                        <label for="photo" class="form-label">Image: </label>
+                        <label for="image" class="form-label">Image: </label>
                         <input type="file" class="form-control" id="image" name="photo" accept="image/*" required />
                     </div>
                     <div class="mb3">
                         <button type="submit" class="btn btn-primary mt-3">Submit</button>
-                        <a href="/user/viewUser" class="btn btn-secondary mt-3">Cancelar</a>
+                        <a href="/products/ViewProduct" class="btn btn-secondary mt-3">Cancelar</a>
                     </div>
                 </form>
             </div>
