--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -26,8 +26,8 @@
                                         <img src="/upload/<%= users.photo %>" width="50" class="img-thumbnail">
                                     </td>
                                     <td>
-                                        <a href="/edit/<%= users._id%>" class="fa fa-edit fa-lg"></a>
-                                        <a href="/delete/<%= users._id%>" class="fa fa-trash fa-lg"></a>
+                                        <a href="/user/edit/<%= users._id%>" class="fa fa-edit fa-lg"></a>
+                                        <a href="/user/delete/<%= users._id%>" class="fa fa-trash fa-lg"></a>
                                     </td>
                                 </tr>
                             <% }) %>
