--- a/views/DeleteProducts.ejs
+++ b/views/DeleteProducts.ejs
@@ -6,7 +6,7 @@
 
     <form action="/products/delete/<%= product._id %>" method="post">
         <button type="submit" class="btn btn-danger">Sí, eliminar</button>
-        <a href="/ViewProduct" class="btn btn-secondary">Cancelar</a>
+        <a href="/products/ViewProduct" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 
