--- a/views/ViewProduct.ejs
+++ b/views/ViewProduct.ejs
@@ -9,6 +9,7 @@
                                 <th scope="col">ID</th>
                                 <th scope="col">Nombre</th>
                                 <th scope="col">Descripción</th>
+                                <th scope="col">Categoría</th>
                                 <th scope="col">Stock</th>
                                 <th scope="col">Precio</th>
                                 <th scope="col">Foto</th>
@@ -21,6 +22,7 @@
                                     <td><%= ++ViewProduct %></td>
                                     <td><%= products.name %></td>
                                     <td><%= products.description %></td>
+                                    <td><%= products.category %></td>
                                     <td><%= products.stock %></td>
                                     <td><%= products.price %></td>
                                     <td><img src="/upload/<%= products.image %>" width="50" class="img-thumbnail"></td>
