--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -16,6 +16,10 @@
                         <input type="description" class="form-control" id="description" name="description" placeholder="Enter your description" required />
                     </div>
                     <div class="mb3">
+                        <label for="category" class="form-label">Category: </label>
+                        <input type="text" class="form-control" id="category" name="category" placeholder="Enter your category" required />
+                    </div>
+                    <div class="mb3">
                         <label for="price" class="form-label">Price: </label>
                         <input type="text" class="form-control" id="price" name="price" placeholder="Enter your price" required />
                     </div>
