--- a/views/ViewProduct.ejs
+++ b/views/ViewProduct.ejs
@@ -7,12 +7,12 @@
                         <thead class="table-dark">
                             <tr>
                                 <th scope="col">ID</th>
-                                <th scope="col">Nombre</th>
-                                <th scope="col">Descripción</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Description</th>
                                 <th scope="col">Stock</th>
-                                <th scope="col">Precio</th>
-                                <th scope="col">Foto</th>
-                                <th scope="col">Acciones</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Photo</th>
+                                <th scope="col">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
