--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -8,11 +8,11 @@
                         <thead class="table-dark">
                             <tr>
                                 <th scope="col">ID</th>
-                                <th scope="col">Nombre</th>
+                                <th scope="col">Name</th>
                                 <th scope="col">Email</th>
-                                <th scope="col">Teléfono</th>
-                                <th scope="col">Foto</th>
-                                <th scope="col">Acciones</th>
+                                <th scope="col">Cell</th>
+                                <th scope="col">Photo</th>
+                                <th scope="col">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
