Parte visual y media funcional del OnlineStore terminada, falta revisar el buscar y el category con mas productos

--- a/views/ViewProduct.ejs
+++ b/views/ViewProduct.ejs
@@ -23,7 +23,7 @@
                                     <td><%= products.description %></td>
                                     <td><%= products.category %></td>
                                     <td><%= products.stock %></td>
-                                    <td><%= products.price %></td>
+                                    <td>$<%= products.price %></td>
                                     <td><img src="/upload/<%= products.image %>" width="50" class="img-thumbnail"></td>
                                     <td>
                                         <a href="/products/edit/<%= products._id%>" class="fa fa-edit fa-lg"></a>
