--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -20,7 +20,7 @@
                         <input type="text" class="form-control" id="category" name="category" placeholder="Enter your category" required />
                     </div>
                     <div class="mb3">
-                        <label for="price" class="form-label">Price: </label>
+                        <label for="price" class="form-label">Price $: </label>
                         <input type="text" class="form-control" id="price" name="price" placeholder="Enter your price" required />
                     </div>
                     <div class="mb3">
