--- a/views/layouts/headerStore.ejs
+++ b/views/layouts/headerStore.ejs
@@ -8,7 +8,7 @@
     <title><%= titulo %></title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">DropTrendz</a>
         <button
@@ -42,4 +42,4 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
