--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title><%= titulo %></title>
+
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      
+      main {
+        flex: 1 0 auto;
+      }
+      
+      footer {
+        flex-shrink: 0;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">DropTrendz</a>
+        <h5 class="fw-bold text-primary">
+            <i class="fas fa-store me-1"></i><a class="navbar-brand" href="/">DropTrendz</a>
+          </h5>
         <button
           class="navbar-toggler"
           type="button"
@@ -23,26 +41,34 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active fa fa-home fa-lg " aria-current="page" href="/"></a>
+              <a class="nav-link fw-semibold" href="/user/add">
+                <i class="fas fa-user-plus me-1"></i>Agregar Usuarios
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/user/add">Agregar Usuarios</a>
+              <a class="nav-link fw-semibold" href="/user/viewUser">
+                <i class="fas fa-users me-1"></i>Ver Usuarios
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/user/viewUser">Ver Usuarios</a>
+              <a class="nav-link fw-semibold" href="/products/ViewProduct">
+                <i class="fas fa-boxes me-1"></i>Ver Productos
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/products/ViewProduct">Ver Productos </a>
+              <a class="nav-link fw-semibold" href="/products/add">
+                <i class="fas fa-plus-circle me-1"></i>Agregar Productos
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/products/add">Agregar Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/products/OnlineStore">Tienda Online</a>
+              <a class="nav-link fw-semibold text-primary" href="/products/OnlineStore">
+                <i class="fas fa-shopping-bag me-1"></i>Tienda Online
+              </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+<main class="flex-grow-1">
